RESOLVED FIXED152241
[iOS] REGRESSION (r191849): There's no yellow bouncy highlight when using Find on Page
https://bugs.webkit.org/show_bug.cgi?id=152241
Summary [iOS] REGRESSION (r191849): There's no yellow bouncy highlight when using Fin...
Tim Horton
Reported 2015-12-14 00:52:45 PST
[iOS] REGRESSION (r191849): There's no yellow bouncy highlight when using Find on Page
Attachments
Patch (2.11 KB, patch)
2015-12-14 00:53 PST, Tim Horton
no flags
New patch with two tests (33.25 KB, patch)
2015-12-14 20:53 PST, Tim Horton
simon.fraser: review+
buildbot: commit-queue-
Archive of layout-test-results from ews101 for mac-yosemite (1.01 MB, application/zip)
2015-12-14 21:48 PST, Build Bot
no flags
Archive of layout-test-results from ews112 for mac-yosemite (802.60 KB, application/zip)
2015-12-14 21:50 PST, Build Bot
no flags
Archive of layout-test-results from ews105 for mac-yosemite-wk2 (946.69 KB, application/zip)
2015-12-14 21:51 PST, Build Bot
no flags
Tim Horton
Comment 1 2015-12-14 00:53:06 PST
WebKit Commit Bot
Comment 2 2015-12-14 00:53:52 PST
Attachment 267284 [details] did not pass style-queue: ERROR: Source/WebCore/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] ERROR: Source/WebCore/ChangeLog:8: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 2 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3 2015-12-14 00:54:06 PST
Going to figure out how to make a test, because this is fairly fundamental functionality that was broken for months with no tests catching it.
Andreas Kling
Comment 4 2015-12-14 08:43:34 PST
Comment on attachment 267284 [details] Patch Oh damn, sorry about that. r=me!
Darin Adler
Comment 5 2015-12-14 08:51:48 PST
Comment on attachment 267284 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=267284&action=review > Source/WebCore/page/PageOverlay.cpp:78 > + return IntRect(IntPoint(), m_overrideFrame.size()); I like to write it like this: return { { }, m_overrideFrame.size() }; Maybe less clear, but I like how it’s more terse and the type is implicit and so it’s guaranteed no extra type conversion happens.
Tim Horton
Comment 6 2015-12-14 20:53:30 PST
Created attachment 267339 [details] New patch with two tests
Simon Fraser (smfr)
Comment 7 2015-12-14 21:07:59 PST
Comment on attachment 267339 [details] New patch with two tests View in context: https://bugs.webkit.org/attachment.cgi?id=267339&action=review > Source/WebCore/ChangeLog:15 > + if we frame is manually overriden. if we frame? > Source/WebCore/ChangeLog:47 > + * testing/MockPageOverlay.cpp: Added. > + (WebCore::MockPageOverlay::create): > + (WebCore::MockPageOverlay::MockPageOverlay): > + (WebCore::MockPageOverlay::setFrame): > + * testing/MockPageOverlay.h: Added. > + (WebCore::MockPageOverlay::overlay): > + * testing/MockPageOverlay.idl: Added. > + * testing/MockPageOverlayClient.cpp: > + (WebCore::MockPageOverlayClient::installOverlay): > + (WebCore::MockPageOverlayClient::uninstallAllOverlays): > + (WebCore::MockPageOverlayClient::pageOverlayDestroyed): > + (WebCore::MockPageOverlayClient::drawRect): > + (WebCore::MockPageOverlayClient::mouseEvent): > + * testing/MockPageOverlayClient.h: > + Make internals.installMockPageOverlay return a MockPageOverlay object so > + tests can manipulate their overlay. For now, expose setFrame. > + Also, log when MockPageOverlayClient gets asked to paint or receives a mouse event, > + which will show up in test output. Slightly unconventional, but very convenient. I'm close to saying that you've gone too far here. Does all this code ship? > Source/WebCore/page/PageOverlay.cpp:190 > + mousePositionInOverlayCoordinates.moveBy(-frame().location()); Doesn't the overlay have a "contentsToOverlay" or something that should take care of this?
Build Bot
Comment 8 2015-12-14 21:48:38 PST
Comment on attachment 267339 [details] New patch with two tests Attachment 267339 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/560885 New failing tests: pageoverlay/overlay-large-document-scrolled.html pageoverlay/overlay-installation.html pageoverlay/overlay-small-frame-mouse-events.html pageoverlay/overlay-large-document.html
Build Bot
Comment 9 2015-12-14 21:48:41 PST
Created attachment 267345 [details] Archive of layout-test-results from ews101 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 10 2015-12-14 21:50:39 PST
Comment on attachment 267339 [details] New patch with two tests Attachment 267339 [details] did not pass mac-debug-ews (mac): Output: http://webkit-queues.webkit.org/results/560879 New failing tests: pageoverlay/overlay-large-document.html pageoverlay/overlay-installation.html pageoverlay/overlay-large-document-scrolled.html pageoverlay/overlay-small-frame-mouse-events.html
Build Bot
Comment 11 2015-12-14 21:50:44 PST
Created attachment 267346 [details] Archive of layout-test-results from ews112 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-yosemite Platform: Mac OS X 10.10.5
Build Bot
Comment 12 2015-12-14 21:51:49 PST
Comment on attachment 267339 [details] New patch with two tests Attachment 267339 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/560887 New failing tests: pageoverlay/overlay-large-document.html pageoverlay/overlay-installation.html pageoverlay/overlay-large-document-scrolled.html pageoverlay/overlay-small-frame-mouse-events.html
Build Bot
Comment 13 2015-12-14 21:51:53 PST
Created attachment 267347 [details] Archive of layout-test-results from ews105 for mac-yosemite-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-yosemite-wk2 Platform: Mac OS X 10.10.5
Tim Horton
Comment 14 2015-12-14 22:13:05 PST
> > Source/WebCore/ChangeLog:47 > > + * testing/MockPageOverlay.cpp: Added. > > + (WebCore::MockPageOverlay::create): > > + (WebCore::MockPageOverlay::MockPageOverlay): > > + (WebCore::MockPageOverlay::setFrame): > > + * testing/MockPageOverlay.h: Added. > > + (WebCore::MockPageOverlay::overlay): > > + * testing/MockPageOverlay.idl: Added. > > + * testing/MockPageOverlayClient.cpp: > > + (WebCore::MockPageOverlayClient::installOverlay): > > + (WebCore::MockPageOverlayClient::uninstallAllOverlays): > > + (WebCore::MockPageOverlayClient::pageOverlayDestroyed): > > + (WebCore::MockPageOverlayClient::drawRect): > > + (WebCore::MockPageOverlayClient::mouseEvent): > > + * testing/MockPageOverlayClient.h: > > + Make internals.installMockPageOverlay return a MockPageOverlay object so > > + tests can manipulate their overlay. For now, expose setFrame. > > + Also, log when MockPageOverlayClient gets asked to paint or receives a mouse event, > > + which will show up in test output. Slightly unconventional, but very convenient. > > I'm close to saying that you've gone too far here. I'd say we're pretty far past too far. > Does all this code ship? No, it's built into WebCoreTestSupport!
Tim Horton
Comment 15 2015-12-14 22:13:52 PST
Somehow I forgot the rebaselines.
Tim Horton
Comment 16 2015-12-15 14:46:54 PST
Tim Horton
Comment 17 2015-12-15 14:55:14 PST
Michael Catanzaro
Comment 18 2016-01-08 11:50:09 PST
Loren discovered the following tests have been failing for GTK since r194117: pageoverlay/overlay-installation.html [ Failure ] pageoverlay/overlay-large-document-scrolled.html [ Failure ] pageoverlay/overlay-large-document.html [ Failure ] pageoverlay/overlay-small-frame-mouse-events.html [ Failure ] pageoverlay/overlay-small-frame-paints.html [ Failure ] The test are not showing the 'MockPageOverlayClient::drawRect dirtyRect()' logs introduced on the expectations. He filed bug #152908.
Note You need to log in before you can comment on or make changes to this bug.