Source/WebCore/testing/Internals.h
@@ -58,6 +58,7 @@ class InternalSettings;
 class MallocStatistics;
 class MediaSession;
 class MemoryInfo;
+class MockPageOverlay;
 class Node;
 class Page;
 class Range;
@@ -417,7 +418,7 @@ public:
     void simulateSystemSleep() const;
     void simulateSystemWake() const;
 
-    void installMockPageOverlay(const String& overlayType, ExceptionCode&);
+    RefPtr<MockPageOverlay> installMockPageOverlay(const String& overlayType, ExceptionCode&);
     String pageOverlayLayerTreeAsText(ExceptionCode&) const;
 
     void setPageMuted(bool);
